@@ -52,7 +52,7 @@ You'll need to download its dataset -> scipion3 testdata --download tomo-tutoria
         "hostName": "localhost",
         "numberOfThreads": 10,
         "numberOfMpi": 1,
-        "inputTomograms": "2.outputTomograms"
+        "inputTomograms": "2.Tomograms"
     },
     {
         "object.className": "EmanProtTomoExtraction",
