@@ -26,5 +26,4 @@
 
 from .viewers_data import (TomoDataViewer, TSMotionCorrectionViewer,
                            CtfEstimationTomoViewer)
-from .viewer_tomograms import ViewerProtImportTomograms
 from .viewer_split_evenodd import SplitEvenOddViewer
