@@ -1,10 +1,13 @@
 v3.1.6:
+  - Tilt order inferred from dose when tlt file has dose
   - Fix: subtomograms with coordinates work in absence of volId
   - HIV-HTA template: removes coords extraction and reconstruction since mapback can be done without them
   - Import Tilt series or Import tilt series movies do not work in streaming anymore
+  - Import tomograms outputs "Tomograms" and defines possible outputs. Templates and tests adapted
   Developers:
     - __init__ uses logger now
     - test_transformation fixed
+    - SetOfCoordinates refactored internally to deal better with tomograms.
 v3.1.5:
  developers: hot fix, invalid import in test centralized layer
 v3.1.4:
